<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/home_page_buttons_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_string"
            android:textSize="@dimen/home_page_button_size"/>

        <Button
            android:id="@+id/home_page_buttons_tests_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tests_string"
            android:textSize="@dimen/home_page_button_size" />

        <Button
            android:id="@+id/home_page_buttons_program_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/program_string"
            android:textSize="@dimen/home_page_button_size"/>

        <Button
            android:id="@+id/home_page_buttons_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/history_string"
            android:textSize="@dimen/home_page_button_size"/>

        <Button
            android:id="@+id/home_page_buttons_ask_for_help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ask_for_help_string"
            android:textSize="@dimen/home_page_button_size" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>