<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".fragment.homepage.ProgramFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/my_schedule"
            android:textAlignment="center"
            android:textColor="#21B6A8"
            android:textSize="30sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout_ask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="#21B6A8"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="370dp">

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:choiceMode="multipleChoice" />
        </RelativeLayout>

        <Button
            android:id="@+id/butonSend_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/sign_in_up_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="17sp" />

    </LinearLayout>

</FrameLayout>
